--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Lamp server</h1>
+    <div>
+        <a>
+            <div>
+                <h3>Turn on then off</h3>
+            </div>
+        </a>
+    </div>
 </body>
 </html>
