improvements and threading

--- a/public/lampPicker.html
+++ b/public/lampPicker.html
@@ -4,17 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Pick lamp</title>
 </head>
 <body>
-    <h1>Lamp server</h1>
+    <h1>Pick lamp</h1>
     <div>
-        <a href="lampPicker.html?hi=bruv">
-            <div class="actionDiv">
-                <h3>Turn on then off</h3>
-            </div>
-        </a>
+        
     </div>
 </body>
 </html>
