can now send a json document and load it in client javascript

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,11 @@
 <body>
     <h1>Lamp server</h1>
     <div>
+        <a href="form.html?jsonUrl=allSafeStorageParameters">
+            <div class="actionDiv">
+                <h3>Edit all values</h3>
+            </div>
+        </a>
         <a href="lampPicker.html?hi=bruv">
             <div class="actionDiv">
                 <h3>Turn on then off</h3>
