--- a/public/form.html
+++ b/public/form.html
@@ -6,11 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="form.css">
 </head>
 <body>
     <h1>Form</h1>
-    <form action = "/formHandler">
+    <form action = "/formHandler" id="mainForm">
+        <div id="generatedItems">
 
+        </div>
+        <input type="submit" value="Submit">
     </form>
 
     <script src="form.js"></script>
