--- a/public/form.html
+++ b/public/form.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h1>Form</h1>
-    <form action = "/formHandler" id="mainForm">
+    <form action = "/saveStorageForm" id="mainForm" method="POST">
         <div id="generatedItems">
 
         </div>
