--- a/public/form.html
+++ b/public/form.html
@@ -11,9 +11,7 @@
 <body>
     <h1>Form</h1>
     <form action = "/saveStorageForm" id="mainForm" method="POST">
-        <div id="generatedItems">
-
-        </div>
+        <textarea id="jsonArea" name="jsonArea"></textarea>
         <input type="submit" value="Submit">
     </form>
 
