--- a/public/index.html
+++ b/public/index.html
@@ -15,11 +15,18 @@
                 <h3>Edit all values</h3>
             </div>
         </a>
-        <a href="lampPicker.html?hi=bruv">
-            <div class="actionDiv">
-                <h3>Turn on then off</h3>
-            </div>
-        </a>
+
+        <div id="needsRaspiSetup">
+            <a href="lampPicker.html?hi=bruv">
+                <div class="actionDiv">
+                    <h3>Turn on then off</h3>
+                </div>
+            </a>
+        </div>
+
     </div>
+
+    <script src="script.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
