--- a/public/form.html
+++ b/public/form.html
@@ -15,6 +15,7 @@
         <input type="submit" value="Submit">
     </form>
 
+    <script src="script.js"></script>
     <script src="form.js"></script>
 </body>
 </html>
