working pick lamp

--- a/public/lampPicker.html
+++ b/public/lampPicker.html
@@ -5,11 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pick lamp</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="lampPicker.css">
 </head>
 <body>
     <h1>Pick lamp</h1>
-    <div>
+    <div id="devicesContainer">
         
     </div>
+
+    <script src="script.js"></script>
+    <script src="lampPicker.js"></script>
 </body>
 </html>
