device control page

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
         <div id="needsRaspiSetup">
             <a href="lampPicker.html?hi=bruv">
                 <div class="actionDiv">
-                    <h3>Turn on then off</h3>
+                    <h3>Control device</h3>
                 </div>
             </a>
         </div>
