--- a/public/deviceControl.html
+++ b/public/deviceControl.html
@@ -18,7 +18,7 @@
         <div id="onOffDiv" class="deviceControl">
             <p>On / Off</p>
             <label class="switch">
-                <input type="checkbox">
+                <input type="checkbox" onchange="toggleOnOff()">
                 <span class="slider round"></span>
             </label>
         </div>
