adds temporary on

--- a/public/deviceControl.html
+++ b/public/deviceControl.html
@@ -22,6 +22,9 @@
                 <span class="slider round"></span>
             </label>
         </div>
+        <div id="tOn" class="deviceControl">
+            <button onclick="tOn()">Turn on for an hour</button>
+        </div>
     </div>
 
     <script src="script.js"></script>
