--- a/public/form.html
+++ b/public/form.html
@@ -12,7 +12,7 @@
     <h1>Form</h1>
     <form action = "/saveStorageForm" id="mainForm" method="POST">
         <textarea id="jsonArea" name="jsonArea"></textarea>
-        <input type="submit" value="Submit">
+        <input type="submit" value="Submit" id="submit">
     </form>
 
     <script src="script.js"></script>
