--- a/public/index.html
+++ b/public/index.html
@@ -6,25 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <h1>Lamp server</h1>
-    <div>
-        <a href="form.html?jsonUrl=allSafeStorageParameters">
-            <div class="actionDiv">
-                <h3>Edit all values</h3>
-            </div>
-        </a>
-
-        <div id="needsRaspiSetup">
-            <a href="lampPicker.html?hi=bruv">
+    <main>
+        <h1>Lamp server</h1>
+        <div>
+            <a href="form.html?jsonUrl=allSafeStorageParameters">
                 <div class="actionDiv">
-                    <h3>Control device</h3>
+                    <h3>Edit all values</h3>
                 </div>
             </a>
+    
+            <div id="needsRaspiSetup">
+                <a href="lampPicker.html?hi=bruv">
+                    <div class="actionDiv">
+                        <h3>Control device</h3>
+                    </div>
+                </a>
+            </div>
+    
         </div>
-
-    </div>
+    </main>
 
 </body>
 </html>
