--- a/public/deviceControl.html
+++ b/public/deviceControl.html
@@ -17,11 +17,7 @@
         </div>
         <div class="deviceControls">
             <div id="onOffDiv" class="deviceControl">
-                <p>On / Off</p>
-                <label class="switch">
-                    <input type="checkbox" onchange="toggleOnOff()">
-                    <span class="slider round"></span>
-                </label>
+                <button onclick="toggleOnOff()">toggle on/off</button>
             </div>
             <div id="tOn" class="deviceControl">
                 <button onclick="tOn()">Turn on for an hour</button>
