--- a/public/deviceControl.html
+++ b/public/deviceControl.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="deviceControl.css">
 </head>
 <body>
+    <object type="text/html" data="nav.html" class="navObject"></object>
     <main>
         <h1>Device control</h1>
         <div class="deviceInfo">
