--- a/public/form.html
+++ b/public/form.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="form.css">
 </head>
 <body>
+    <object type="text/html" data="nav.html" class="navObject"></object>
     <h1>Form</h1>
     <form action = "/saveStorageForm" id="mainForm" method="POST">
         <textarea id="jsonArea" name="jsonArea"></textarea>
