--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Lamp server</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
+    <object type="text/html" data="nav.html" class="navObject"></object>
     <main>
         <h1>Lamp server</h1>
         <div>
@@ -19,15 +20,13 @@
             </a>
     
             <div id="needsRaspiSetup">
-                <a href="lampPicker.html?hi=bruv">
+                <a href="lampPicker.html">
                     <div class="actionDiv">
                         <h3>Control device</h3>
                     </div>
                 </a>
             </div>
-    
         </div>
     </main>
-
 </body>
 </html>
