--- a/public/lampPicker.html
+++ b/public/lampPicker.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="lampPicker.css">
 </head>
 <body>
+    <object type="text/html" data="nav.html" class="navObject"></object>
     <h1>Pick lamp</h1>
     <div id="devicesContainer">
         
