--- a/public/404.html
+++ b/public/404.html
@@ -7,6 +7,7 @@
     <title>404</title>
 </head>
 <body>
+    <object type="text/html" data="nav.html" class="navObject"></object>
     <h1>404</h1>
     <h2>The file does not exist</h2>
     <a href="index.html">Go back to safety</a>
