adds logs functionality

--- a/public/nav.html
+++ b/public/nav.html
@@ -14,6 +14,7 @@
         <a target="_parent" href="index.html">Home</a>
         <a target="_parent" href="lampPicker.html">Lamp picker</a>
         <a target="_parent" href="form.html?jsonUrl=allSafeStorageParameters">Settings</a>
+        <a target="_parent" href="log.html">Read logs</a>
     </nav>
 </body>
 </html>
