--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,14 @@
                     </div>
                 </a>
             </div>
+
+            <div>
+                <a href="log.html">
+                    <div class="actionDiv">
+                        <h3>Read logs</h3>
+                    </div>
+                </a>
+            </div>
         </div>
     </main>
 </body>
