--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,13 @@
                     </div>
                 </a>
             </div>
+            <div>
+                <a href="update">
+                    <div class="actionDiv">
+                        <h3>Update</h3>
+                    </div>
+                </a>
+            </div>
         </div>
     </main>
 </body>
