index.html edit

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
         <div>
             <a href="form.html?jsonUrl=allSafeStorageParameters">
                 <div class="actionDiv">
-                    <h3>Edit all values</h3>
+                    <h3>Settings</h3>
                 </div>
             </a>
     
