minor ui updates and code cleaning

--- a/public/index.html
+++ b/public/index.html
@@ -12,13 +12,7 @@
     <object type="text/html" data="nav.html" class="navObject"></object>
     <main>
         <h1>Lamp server</h1>
-        <div>
-            <a href="form.html?jsonUrl=allSafeStorageParameters">
-                <div class="actionDiv">
-                    <h3>Settings</h3>
-                </div>
-            </a>
-    
+        <div>    
             <div id="needsRaspiSetup">
                 <a href="lampPicker.html">
                     <div class="actionDiv">
@@ -26,11 +20,17 @@
                     </div>
                 </a>
             </div>
-
+            <div>
+                <a href="form.html?jsonUrl=allSafeStorageParameters">
+                    <div class="actionDiv">
+                        <h3>Settings</h3>
+                    </div>
+                </a>
+            </div>
             <div>
                 <a href="log.html">
                     <div class="actionDiv">
-                        <h3>Read logs</h3>
+                        <h3>Logs</h3>
                     </div>
                 </a>
             </div>
