--- a/public/nav.html
+++ b/public/nav.html
@@ -12,9 +12,9 @@
 <body>
     <nav>
         <a target="_parent" href="index.html">Home</a>
-        <a target="_parent" href="lampPicker.html">Lamp picker</a>
+        <a target="_parent" href="lampPicker.html">Control device</a>
         <a target="_parent" href="form.html?jsonUrl=allSafeStorageParameters">Settings</a>
-        <a target="_parent" href="log.html">Read logs</a>
+        <a target="_parent" href="log.html">Logs</a>
     </nav>
 </body>
 </html>
