--- a/public/log.html
+++ b/public/log.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Log</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="log.css">
 </head>
 <body>
     <object type="text/html" data="nav.html" class="navObject"></object>
