--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
                 </a>
             </div>
             <div>
-                <a href="update">
+                <a href="update.html">
                     <div class="actionDiv">
                         <h3>Update</h3>
                     </div>
