--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
                 </a>
             </div>
             <div>
-                <a href="form.html?jsonUrl=allSafeStorageParameters">
+                <a href="form.html?jsonUrl=settings">
                     <div class="actionDiv">
                         <h3>Settings</h3>
                     </div>
