--- a/public/nav.html
+++ b/public/nav.html
@@ -13,7 +13,7 @@
     <nav>
         <a target="_parent" href="index.html">Home</a>
         <a target="_parent" href="lampPicker.html">Control device</a>
-        <a target="_parent" href="form.html?jsonUrl=allSafeStorageParameters">Settings</a>
+        <a target="_parent" href="form.html?jsonUrl=settings">Settings</a>
         <a target="_parent" href="log.html">Logs</a>
     </nav>
 </body>
