--- a/public/form.html
+++ b/public/form.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Settings</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="form.css">
 </head>
 <body>
     <object type="text/html" data="nav.html" class="navObject"></object>
-    <h1>Form</h1>
+    <h1>Settings</h1>
     <form action = "/saveStorageForm" id="mainForm" method="POST">
         <textarea id="jsonArea" name="jsonArea"></textarea>
         <input type="submit" value="Submit" id="submit">
