--- a/public/nav.html
+++ b/public/nav.html
@@ -11,10 +11,10 @@
 </head>
 <body>
     <nav>
-        <a target="_parent" href="index.html">Home</a>
-        <a target="_parent" href="lampPicker.html">Control device</a>
-        <a target="_parent" href="form.html?jsonUrl=settings">Settings</a>
-        <a target="_parent" href="log.html">Logs</a>
+        <a target="_parent" href="index.html">HOME</a>
+        <a target="_parent" href="lampPicker.html">CONTROL DEVICE</a>
+        <a target="_parent" href="form.html?jsonUrl=settings">SETTINGS</a>
+        <a target="_parent" href="log.html">LOGS</a>
     </nav>
 </body>
 </html>
