--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 <body>
     <object type="text/html" data="nav.html" class="navObject"></object>
     <main>
-        <h1>Lamp server</h1>
+        <h1>Lamp Server</h1>
         <div>    
             <div id="needsRaspiSetup">
                 <a href="lampPicker.html">
