--- a/public/lampPicker.html
+++ b/public/lampPicker.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pick lamp</title>
+    <title>Pick Lamp</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="lampPicker.css">
 </head>
 <body>
     <object type="text/html" data="nav.html" class="navObject"></object>
-    <h1>Pick lamp</h1>
+    <h1>Pick Lamp</h1>
     <div id="devicesContainer">
         
     </div>
