--- a/public/404.html
+++ b/public/404.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>404</title>
 </head>
 <body>
     <object type="text/html" data="nav.html" class="navObject"></object>
     <h1>404</h1>
     <h2>The file does not exist</h2>
-    <a href="index.html">Go back to start</a>
 </body>
 </html>
