adds get color function and makes the source code even more messy

--- a/public/deviceControl.html
+++ b/public/deviceControl.html
@@ -33,6 +33,7 @@
                     <option value="setBrightness">setBrightness</option>
                     <option value="setColor">setColor</option>
                     <option value="setDefinedColor">setDefinedColor</option>
+                    <option value="getColor">getColor</option>
                 </select>
                 <label>Payload</label>
                 <input type="text" id="payloadInput">
