--- a/program/public/deviceControl.html
+++ b/program/public/deviceControl.html
@@ -34,6 +34,7 @@
                     <option value="setColor">setColor</option>
                     <option value="setDefinedColor">setDefinedColor</option>
                     <option value="getColor">getColor</option>
+                    <option value="getBrightness">getBrightness</option>
                 </select>
                 <label>Payload</label>
                 <input type="text" id="payloadInput">
