better device control

--- a/program/public/index.html
+++ b/program/public/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lamp Server</title>
+    <title>Tradfri Server</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <object type="text/html" data="nav.html" class="navObject"></object>
     <main>
-        <h1>Lamp Server</h1>
+        <h1>Tradfri Server</h1>
         <div>    
             <div id="needsRaspiSetup">
                 <a href="lampPicker.html">
