--- a/program/public/deviceControl.html
+++ b/program/public/deviceControl.html
@@ -8,37 +8,43 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="deviceControl.css">
 </head>
-<body>
+<body id="backgroundElem">
     <object type="text/html" data="nav.html" class="navObject"></object>
     <main>
-        <div class="deviceInfo">
-            <h1 id="deviceName">Name</h1>
-            <p id="deviceId">12345</p>
-        </div>
-        <div class="deviceControls">
-            <div class="mainControls">
-                <div id="onOffDiv" class="deviceControl">
-                    <button onclick="toggleOnOff()">Toggle On/Off</button>
+        <div class="mainContent">
+            <div class="deviceInfo">
+                <h1 id="deviceName">Name</h1>
+                <div class="otherDeviceInfo">
+                    <p>color: <span id="deviceColor"></span></p>
+                    <p>brightness: <span id="deviceBrightness"></span></p>
                 </div>
-                <div id="tOn" class="deviceControl">
-                    <button onclick="tOn()">Turn on for an hour</button>
-                </div>
+                <p id="deviceId">12345</p>
             </div>
-
-
-            <div class="advancedControls">
-                <label>Action</label>
-                <select id="actionSelect">
-                    <option value="setState">setState</option>
-                    <option value="setBrightness">setBrightness</option>
-                    <option value="setColor">setColor</option>
-                    <option value="setDefinedColor">setDefinedColor</option>
-                    <option value="getColor">getColor</option>
-                    <option value="getBrightness">getBrightness</option>
-                </select>
-                <label>Payload</label>
-                <input type="text" id="payloadInput">
-                <button onclick="sendControlFormula()">Send</button>
+            <div class="deviceControls">
+                <div class="mainControls">
+                    <div id="onOffDiv" class="deviceControl">
+                        <button onclick="toggleOnOff()">Toggle On/Off</button>
+                    </div>
+                    <div id="tOn" class="deviceControl">
+                        <button onclick="tOn()">Turn on for an hour</button>
+                    </div>
+                </div>
+    
+    
+                <div class="advancedControls">
+                    <label>Action</label>
+                    <select id="actionSelect">
+                        <option value="setState">setState</option>
+                        <option value="setBrightness">setBrightness</option>
+                        <option value="setColor">setColor</option>
+                        <option value="setDefinedColor">setDefinedColor</option>
+                        <option value="getColor">getColor</option>
+                        <option value="getBrightness">getBrightness</option>
+                    </select>
+                    <label>Payload</label>
+                    <input type="text" id="payloadInput">
+                    <button onclick="sendControlFormula()">Send</button>
+                </div>
             </div>
         </div>
     </main>
