--- a/program/public/deviceControl.html
+++ b/program/public/deviceControl.html
@@ -36,6 +36,7 @@
                     <select id="actionSelect">
                         <option value="setState">setState</option>
                         <option value="setBrightness">setBrightness</option>
+                        <option value="setBrightnessLevel">setBrightnessLevel</option>
                         <option value="setColor">setColor</option>
                         <option value="setDefinedColor">setDefinedColor</option>
                         <option value="getColor">getColor</option>
