--- a/program/public/deviceControl.html
+++ b/program/public/deviceControl.html
@@ -41,6 +41,7 @@
                         <option value="setDefinedColor">setDefinedColor</option>
                         <option value="getColor">getColor</option>
                         <option value="getBrightness">getBrightness</option>
+                        <option value="turnOffIf">turnOffIf</option>
                     </select>
                     <label>Payload</label>
                     <input type="text" id="payloadInput">
