adds run routine from deviceControl

--- a/program/public/deviceControl.html
+++ b/program/public/deviceControl.html
@@ -42,6 +42,7 @@
                         <option value="getColor">getColor</option>
                         <option value="getBrightness">getBrightness</option>
                         <option value="turnOffIf">turnOffIf</option>
+                        <option value="performEvent">performEvent</option>
                     </select>
                     <label>Payload</label>
                     <input type="text" id="payloadInput">
